<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    android:background="@drawable/bg_login">
    
    <LinearLayout 
         android:id="@+id/userid_ll"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/login_content_top_margin"
         android:orientation="vertical"
         android:layout_centerInParent="true">
   
     <EditText
         android:id="@+id/mobile_et"
         style="@style/LoginTextFieldTheme"
         android:ems="10"
         android:inputType="number"
         android:maxLength="10"
         android:hint="@string/mobile"/>
   
     <EditText
         android:id="@+id/password_et"
         style="@style/LoginTextFieldTheme"
         android:inputType="textPassword"
         android:ems="10"
         android:imeOptions="actionDone"
         android:hint="@string/password"
         android:layout_marginBottom="@dimen/passwordMarginBottom"/>
     </LinearLayout>

     <Button
         android:id="@+id/signin"
         style="@style/LoginTextFieldTheme"
         android:layout_centerHorizontal="true"
         android:layout_below="@id/userid_ll"
         android:text="@string/login"
         android:textColor="#ffffff"
         android:background="@drawable/login_butn_bg"
         android:layout_marginTop="0dp"
         android:layout_marginBottom="0dp" />  
 
</RelativeLayout>
